--- a/a1/index.html
+++ b/a1/index.html
@@ -2,19 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Calvin Barker Assignment 1 | Grilled Filet</title>
+    <title>Calvin Barker Assignment 1 | Seared Filet Mignon</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <div class="main-container">
         <div class="title-container">
             <div class="title">
-                Grilled Filet with Crumbled Bleu Cheese and Caramelized Onions
+                Seared Filet Mignon
             </div>
-            <hr>
         </div>
-        <div class="content-container">
-            test
+        <!--<div class="content-container">
+            <!--<div class="img-container">
+                <img id="main-pic" src="http://www.noreciperequired.com/sites/default/files/Perfect-Filet-Mignon-Light.gif">
+            </div>
+            <div class="ingredient-container">
+                test
+            </div>-->
+        <div class="col-4">
+            <img id="main-pic" src="http://www.noreciperequired.com/sites/default/files/Perfect-Filet-Mignon-Light.gif">
+            
+            <div class="ingredient-container">
+                <ul>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-6">
+            <p>
+                From your mom, to your roommates, to your hottest Tinder match, this easy recipe will be sure to impress all the carnivores in your life!
+            </p>
+        </div>
+        <div class="col-2">
+test
         </div>
 
     </div>
