--- a/a1/index.html
+++ b/a1/index.html
@@ -6,39 +6,59 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div class="main-container">
-        <div class="title-container">
-            <div class="title">
-                Seared Filet Mignon
-            </div>
+    <div class="title-container">
+        <div class="title">
+            Seared Filet Mignon
         </div>
-        <!--<div class="content-container">
-            <!--<div class="img-container">
-                <img id="main-pic" src="http://www.noreciperequired.com/sites/default/files/Perfect-Filet-Mignon-Light.gif">
-            </div>
-            <div class="ingredient-container">
-                test
-            </div>-->
+    </div>
+    <div class="main-container">
         <div class="col-4">
-            <img id="main-pic" src="http://www.noreciperequired.com/sites/default/files/Perfect-Filet-Mignon-Light.gif">
+            <img id="main-pic" src="Perfect-Filet-Mignon-Light.gif">
             
             <div class="ingredient-container">
+                <div id="ingredient-title">Ingredients <span id="ingredient-servings">(Six servings)</span></div>
                 <ul>
-                    <li>item</li>
-                    <li>item</li>
-                    <li>item</li>
-                    <li>item</li>
+                    <li class="ingredient">6 slices Filet Mignon, each about 1/2 pound</li>
+                    <li class="ingredient">Salt and pepper</li>
+                    <li class="ingredient">1/3c butter</li>
+                    <li class="ingredient">2c red wine (preferably Cabernet Sauvignon)</li>
+                    <li class="ingredient">1tbs Italian seasoning</li>
+                    <li class="ingredient">4tbs extra virgin olive oil, separated into 2tbs</li>
+                    <li class="ingredient">(Optional) Bleu cheese crumbles</li>
                 </ul>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-8">
             <p>
-                From your mom, to your roommates, to your hottest Tinder match, this easy recipe will be sure to impress all the carnivores in your life!
-            </p>
+                From your mom, to your roommates, to your hottest Tinder matches, this easy recipe will be sure to impress all the carnivores in your life!
+            </p><br/>
+            <span id="step-title">Steps</span>
+            <ol>
+                <li class="step">Before you even begin thinking about putting those filets on the skillet, make a simple
+                    marinade of the red wine, Italian seasoning, 2tbs olive oil, and a solid amount of salt. Mix the
+                    marinade and steaks in a Ziploc bag and allow them to sit in the fridge for about four hours. Then,
+                    allow them to rest at room temperature for about half an hour before cooking them.</li>
+                <li class="step">Using a cast iron skillet over med-high heat, melt the butter and mix in the remaining
+                    olive oil.</li>
+                <li class="step">Once the skillet is so hot that it's smoking, throw in the the steaks and season with
+                    salt and pepper to taste. Let cook for 3 minutes before flipping to cook on the other side for another
+                    3 minutes seasoning with more salt and pepper for medium rare. (Optional: sprinkle with crumbled bleu cheese for added flavor complexity.)</li>
+                <li class="step">(Optional:) Serve with the same bottle of wine used to make the marinade.</li>
+            </ol>
+            <hr>
+            <div class="author-container">
+                <div class="author-title">
+                    About the Author <br/><span class="author-name">Calvin Barker</span>
+                </div>
+                <a href="https://www.linkedin.com/in/calvin-barker-1b091376?trk=nav_responsive_tab_profile_pic">
+                <img src="fb_prof.jpg" class="author-pic"></a>
+                <div class="author-bio">
+                    <p>Hailing from the backwoods of Wake Forest, NC, Calvin Barker is world-renowned for his teriyaki ahi ahi steaks and PB&J sandwiches.
+                    Click on his picture to check out his LinkedIn!</p>
+                </div>
+            </div>
         </div>
-        <div class="col-2">
-test
-        </div>
+
 
     </div>
 
