--- a/a1/index.html
+++ b/a1/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="main-container">
         <div class="col-4">
-            <img id="main-pic" src="Perfect-Filet-Mignon-Light.gif">
+            <img id="main-pic" alt="A real pretty steak" src="Perfect-Filet-Mignon-Light.gif">
             
             <div class="ingredient-container">
                 <div id="ingredient-title">Ingredients <span id="ingredient-servings">(Six servings)</span></div>
@@ -42,7 +42,8 @@
                     olive oil.</li>
                 <li class="step">Once the skillet is so hot that it's smoking, throw in the the steaks and season with
                     salt and pepper to taste. Let cook for 3 minutes before flipping to cook on the other side for another
-                    3 minutes seasoning with more salt and pepper for medium rare. (Optional: sprinkle with crumbled bleu cheese for added flavor complexity.)</li>
+                    3 minutes seasoning with more salt and pepper for medium rare.</li>
+                <li class="step">(Optional:) Sprinkle with crumbled bleu cheese after the first flip to add some flavor complexity.</li>
                 <li class="step">(Optional:) Serve with the same bottle of wine used to make the marinade.</li>
             </ol>
             <hr>
@@ -51,7 +52,7 @@
                     About the Author <br/><span class="author-name">Calvin Barker</span>
                 </div>
                 <a href="https://www.linkedin.com/in/calvin-barker-1b091376?trk=nav_responsive_tab_profile_pic">
-                <img src="fb_prof.jpg" class="author-pic"></a>
+                <img src="fb_prof.jpg" alt="A real pretty man" class="author-pic"></a>
                 <div class="author-bio">
                     <p>Hailing from the backwoods of Wake Forest, NC, Calvin Barker is world-renowned for his teriyaki ahi ahi steaks and PB&J sandwiches.
                     Click on his picture to check out his LinkedIn!</p>
