refactored for naming conventions

--- a/a1/a1-recipe.html
+++ b/a1/a1-recipe.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Calvin Barker Assignment 1 | Seared Filet Mignon</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Calvin Barker A1 | Seared Filet Mignon</title>
+    <link rel="stylesheet" type="text/css" href="a1-recipe.css">
 </head>
 <body>
     <div class="title-container">
