Added in required scripts and files

--- a/a2/SuperBattleship.html
+++ b/a2/SuperBattleship.html
@@ -3,30 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Super Battleship | Calvin Barker</title>
+
+
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+    <script src="http://www.cs.unc.edu/Courses/comp426-f16/kmp/SuperBattleship/SBConstants.js"></script>
+    <script src="http://www.cs.unc.edu/Courses/comp426-f16/kmp/SuperBattleship/SuperBattleship.js"></script>
+    <script src="DumbAI.js"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+
 </head>
 <body>
+
+
 <div id="gameboard">
     <div id="map-panel">
         <div id="map-view">
-            <div id ="p1-view">
-
-            </div>
+            <div id ="p1-view"></div>
         </div>
     </div>
+
     <div id="player-panel">
-        <div id="fire-view">
-
-        </div>
-        <div id="fleet-view">
-
-        </div>
-        <div id="command-view">
-
-        </div>
-        <div id="enemy-view">
-            
-        </div>
+        <div id="fire-view"></div>
+        <div id="fleet-view"></div>
+        <div id="command-view"></div>
+        <div id="enemy-view"></div>
     </div>
 </div>
+
+
 </body>
 </html>
