started setup of single player JS files

--- a/a2/SuperBattleship.html
+++ b/a2/SuperBattleship.html
@@ -11,6 +11,8 @@
             crossorigin="anonymous"></script>
     <script src="http://www.cs.unc.edu/Courses/comp426-f16/kmp/SuperBattleship/SBConstants.js"></script>
     <script src="http://www.cs.unc.edu/Courses/comp426-f16/kmp/SuperBattleship/SuperBattleship.js"></script>
+    <script src="GUIPlayer.js"></script>
+    <script src="GUIOnePlayerSuperBattleship.js"></script>
     <script src="DumbAI.js"></script>
 
     <!-- CSS -->
