Added in Mocha support for unit testing down the road. Built grid of divs for map. Updated CSS to get ready. Moved copies of API locally

--- a/a2/SuperBattleship.html
+++ b/a2/SuperBattleship.html
@@ -31,14 +31,14 @@
     </div>
 
     <div id="player-panel">
-        <div id="fire-view">FIRE</div>
+        <div id="fire-view"></div>
         <div id="fleet-view">
             <div id="ship-view">
-                <div id="carrier" class="ship"></div>
-                <div id="battleship" class="ship"></div>
-                <div id="submarine" class="ship"></div>
-                <div id="cruiser" class="ship"></div>
-                <div id="destroyer" class="ship"></div>
+                <div class="ship" id="carrier"></div>
+                <div class="ship" id="battleship"></div>
+                <div class="ship" id="submarine"></div>
+                <div class="ship" id="cruiser"></div>
+                <div class="ship" id="destroyer"></div>
             </div>
                 <div id="command-view">
                     <div class="command" id="forward"></div>
