Gave each map square a dynamically-generated id which will be used by jQuery (with modular arthmetic) to handle square selections. Added logic to handle fire button css classes when the squares are selected

--- a/a2/SuperBattleship.html
+++ b/a2/SuperBattleship.html
@@ -31,7 +31,7 @@
     </div>
 
     <div id="player-panel">
-        <div id="fire-view">FIRE</div>
+        <div id="fire-view" class="fire-standby">FIRE</div>
         <div id="fleet-view">
             <div id="ship-view">
                 <div class="ship" id="carrier"></div>
