--- a/a2/SuperBattleship.html
+++ b/a2/SuperBattleship.html
@@ -39,10 +39,10 @@
                 <div class="ship-button" id="destroyer"></div>
             </div>
                 <div id="command-view">
-                    <div class="command top" id="forward"></div>
-                    <div class="command bottom" id="rotate-cw"></div>
-                    <div class="command bottom" id="backward"></div>
-                    <div class="command bottom" id="rotate-ccw"></div>
+                    <div class="command top" id="forward">F</div>
+                    <div class="command bottom" id="rotate-cw">CW</div>
+                    <div class="command bottom" id="backward">B</div>
+                    <div class="command bottom" id="rotate-ccw">CCW</div>
                 </div>
         </div>
         <div id="output-view"></div>
