Restructured click handlers

--- a/a2/SuperBattleship.html
+++ b/a2/SuperBattleship.html
@@ -33,11 +33,11 @@
         <div id="fire-view" class="fire-standby">FIRE</div>
         <div id="fleet-view">
             <div id="ship-view">
-                <div class="ship-button" id="carrier"></div>
-                <div class="ship-button" id="battleship"></div>
-                <div class="ship-button" id="submarine"></div>
-                <div class="ship-button" id="cruiser"></div>
-                <div class="ship-button" id="destroyer"></div>
+                <div class="ship-button" id="Carrier"></div>
+                <div class="ship-button" id="Battleship"></div>
+                <div class="ship-button" id="Cruiser"></div>
+                <div class="ship-button" id="Submarine"></div>
+                <div class="ship-button" id="Destroyer"></div>
             </div>
                 <div id="command-view">
                     <div class="command top" id="forward">F</div>
