redid the AI to shoot at opposing squares when visible to it. skynet phase 1 completed

--- a/a2/SuperBattleship.html
+++ b/a2/SuperBattleship.html
@@ -10,7 +10,7 @@
     <script src="http://www.cs.unc.edu/Courses/comp426-f16/kmp/SuperBattleship/SBConstants.js"></script>
     <script src="http://www.cs.unc.edu/Courses/comp426-f16/kmp/SuperBattleship/SuperBattleship.js"></script>
     <script src="GUIPlayer.js"></script>
-    <script src="DumbAI.js"></script>
+    <script src="barkerc1AI.js"></script>
     <script src="GUIOnePlayerSuperBattleship.js"></script>
 
 
@@ -33,11 +33,11 @@
         <div id="fire-view" class="fire-standby">FIRE</div>
         <div id="fleet-view">
             <div id="ship-view">
-                <div class="ship-button" id="Carrier"></div>
-                <div class="ship-button" id="Battleship"></div>
-                <div class="ship-button" id="Cruiser"></div>
-                <div class="ship-button" id="Submarine"></div>
-                <div class="ship-button" id="Destroyer"></div>
+                <div class="ship-button" id="Carrier">Carrier</div>
+                <div class="ship-button" id="Battleship">Battleship</div>
+                <div class="ship-button" id="Cruiser">Cruiser</div>
+                <div class="ship-button" id="Submarine">Submarine</div>
+                <div class="ship-button" id="Destroyer">Destroyer</div>
             </div>
                 <div id="command-view">
                     <div class="command top" id="forward">F</div>
