more updates to the AI

--- a/a2/SuperBattleship.html
+++ b/a2/SuperBattleship.html
@@ -41,9 +41,9 @@
             </div>
                 <div id="command-view">
                     <div class="command top" id="forward">F</div>
-                    <div class="command bottom" id="rotate-cw">CW</div>
+                    <div class="command bottom" id="rotate-cw">Turn CW</div>
                     <div class="command bottom" id="backward">B</div>
-                    <div class="command bottom" id="rotate-ccw">CCW</div>
+                    <div class="command bottom" id="rotate-ccw">Turn CCW</div>
                 </div>
         </div>
         <div id="output-view"></div>
