battery about to die

--- a/a2/SuperBattleship.html
+++ b/a2/SuperBattleship.html
@@ -30,20 +30,21 @@
     </div>
 
     <div id="player-panel">
-        <div id="fire-view" class="fire-standby">FIRE</div>
+        <div id="fire-view" class="fire-standby"><h4>FIRE</h4></div>
         <div id="fleet-view">
+            <h2>Command Center</h2>
             <div id="ship-view">
-                <div class="ship-button" id="Carrier">Carrier</div>
+                <div class="ship-button" id="Carrier"><h2>Carrier</h2></div>
                 <div class="ship-button" id="Battleship">Battleship</div>
                 <div class="ship-button" id="Cruiser">Cruiser</div>
                 <div class="ship-button" id="Submarine">Submarine</div>
                 <div class="ship-button" id="Destroyer">Destroyer</div>
             </div>
                 <div id="command-view">
-                    <div class="command top" id="forward">F</div>
-                    <div class="command bottom" id="rotate-cw">Turn CW</div>
-                    <div class="command bottom" id="backward">B</div>
-                    <div class="command bottom" id="rotate-ccw">Turn CCW</div>
+                    <div class="command top" id="forward">FWD</div>
+                    <div class="command bottom" id="rotate-cw">TURN CW</div>
+                    <div class="command bottom" id="backward">BWD</div>
+                    <div class="command bottom" id="rotate-ccw">TURN CCW</div>
                 </div>
         </div>
         <div id="output-view"></div>
