have everything except a modal window

--- a/a2/SuperBattleship.html
+++ b/a2/SuperBattleship.html
@@ -35,10 +35,10 @@
             <h2>Command Center</h2>
             <div id="ship-view">
                 <div class="ship-button" id="Carrier"><h2>Carrier</h2></div>
-                <div class="ship-button" id="Battleship">Battleship</div>
-                <div class="ship-button" id="Cruiser">Cruiser</div>
-                <div class="ship-button" id="Submarine">Submarine</div>
-                <div class="ship-button" id="Destroyer">Destroyer</div>
+                <div class="ship-button" id="Battleship"><h2>Battleship</h2></div>
+                <div class="ship-button" id="Cruiser"><h2>Cruiser</h2></div>
+                <div class="ship-button" id="Submarine"><h2>Submarine</h2></div>
+                <div class="ship-button" id="Destroyer"><h2>Destroyer</h2></div>
             </div>
                 <div id="command-view">
                     <div class="command top" id="forward">FWD</div>
@@ -47,7 +47,18 @@
                     <div class="command bottom" id="rotate-ccw">TURN CCW</div>
                 </div>
         </div>
-        <div id="output-view"></div>
+        <div id="output-view">
+            <div id="instructions">
+                <h2>Output</h2>
+                <div id="move-status"></div>
+                <br/>
+                <u><h2>Instructions</h2></u>
+                <p>To fire, click a tile on the map and then the red FIRE button.</p>
+                <p>To move a ship, click on the ship in the Command Center and then either FWD, BWD, TURN CW, or  TURN CCW to
+                    move the ship forward, backward, clockwise, or counterclockwise respectively.</p>
+            </div>
+
+        </div>
     </div>
 </div>
 
