cleaning up fire button

--- a/a2/SuperBattleship.html
+++ b/a2/SuperBattleship.html
@@ -30,7 +30,7 @@
     </div>
 
     <div id="player-panel">
-        <div id="fire-view" class="fire-standby"><h4>FIRE</h4></div>
+        <a href="http://www.calvinbarker.com" target="_blank"><div id="title-view" class="fire-standby"><h6>SUPER BATTLESHIP<br>2K16</h6></div></a>
         <div id="fleet-view">
             <h2>Command Center</h2>
             <div id="ship-view">
@@ -53,7 +53,7 @@
                 <div id="move-status"></div>
                 <br/>
                 <u><h2>Instructions</h2></u>
-                <p>To fire, click a tile on the map and then the red FIRE button.</p>
+                <p>To fire, click a tile on the map.</p>
                 <p>To move a ship, click on the ship in the Command Center and then either FWD, BWD, TURN CW, or  TURN CCW to
                     move the ship forward, backward, clockwise, or counterclockwise respectively.</p>
             </div>
