added AI functionality to rotate

--- a/a2/SuperBattleship.html
+++ b/a2/SuperBattleship.html
@@ -15,7 +15,7 @@
 
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.min.css">
 
 
 </head>
@@ -30,7 +30,7 @@
     </div>
 
     <div id="player-panel">
-        <a href="http://www.calvinbarker.com" target="_blank"><div id="title-view" class="fire-standby"><h6>SUPER BATTLESHIP<br>2K16</h6></div></a>
+        <a href="http://www.calvinbarker.com" target="_blank"><div id="title-view" class="title"><h6>SUPER BATTLESHIP<br>2K16</h6></div></a>
         <div id="fleet-view">
             <h2>Command Center</h2>
             <div id="ship-view">
